home page: Prevent carousel overflow

--- a/client/common/sass/components/_homepage.sass
+++ b/client/common/sass/components/_homepage.sass
@@ -3,6 +3,7 @@
 
 .homepage-section-inner
 	+constrain-to-desktop
+	overflow-x: hidden
 
 .homepage-section-paragraph
 	max-width: 673px
